--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title> My Webpage</title>
-<body>
+	<head>
+		<title> My Webpage!</title>
+	</head>
+
+	<body>
 	Hello, world!
 	</body>
-	</html>
+</html>
